fixing the pass

--- a/quiz.html
+++ b/quiz.html
@@ -70,13 +70,12 @@
                     <div id="main">
                         <div class="card-body">
                             <h5 class="card-text font-weight-bold" id="question"></h5>
-
                         </div>
                         <div class="col-md-15 p-4" id="options">
-                            <button class="btn btn-block  text-left option" id="options1"></button>
-                            <button class="btn btn-block  text-left option" id="options2"></button>
-                            <button class="btn btn-block  text-left option" id="options3"></button>
-                            <button class="btn btn-block  text-left option" id="options4"></button>
+                            <button class="btn btn-block text-left option" id="options1">Earth</button>
+                            <button class="btn btn-block text-left option" id="options2">Jupiter</button>
+                            <button class="btn btn-block text-left option" id="options3">Mars</button>
+                            <button class="btn btn-block text-left option" id="options4">Venus</button>
                             <div class="footer p-4">
                                 <button class="btn float-left" id="prev">PREVIOUS</button>
                                 <button class="btn float-right" id="next">NEXT</button>
